[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Test1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Canvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://Icons/HUD.BG1.png" type="Texture" id=3]
[ext_resource path="res://Icons/reset.png" type="Texture" id=4]
[ext_resource path="res://Icons/erase.png" type="Texture" id=5]
[ext_resource path="res://Icons/color.png" type="Texture" id=6]
[ext_resource path="res://Icons/AD.png" type="Texture" id=7]
[ext_resource path="res://Icons/AU.png" type="Texture" id=8]
[ext_resource path="res://Themes/default.tres" type="Theme" id=9]

[node name="Test1" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Canvas" parent="." index="0" instance=ExtResource( 2 )]

[node name="HUD" type="TextureRect" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = -72.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="Buttons" type="HBoxContainer" parent="HUD" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="ResetButton" type="TextureButton" parent="HUD/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
stretch_mode = 3

[node name="EraseButton" type="TextureButton" parent="HUD/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 148.0
margin_right = 212.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
stretch_mode = 3
_sections_unfolded = [ "Rect", "Textures" ]

[node name="DrawButton" type="TextureButton" parent="HUD/Buttons" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 182.0
margin_right = 246.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
stretch_mode = 3
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ColorButton" type="TextureButton" parent="HUD/Buttons" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_right = 280.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
stretch_mode = 3
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Display" type="ColorRect" parent="HUD/Buttons/ColorButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )

[node name="PullButton" type="TextureButton" parent="HUD" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -60.0
margin_right = 16.0
margin_bottom = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
stretch_mode = 3

[node name="PushButton" type="TextureButton" parent="HUD" index="2"]

visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -60.0
margin_right = 16.0
margin_bottom = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
stretch_mode = 3
_sections_unfolded = [ "Textures" ]

[node name="ClearDialogue" type="ConfirmationDialog" parent="." index="2"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -35.0
margin_right = 141.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 9 )
popup_exclusive = false
window_title = "Clearing canvas..."
resizable = false
dialog_text = "Are you sure?"
dialog_hide_on_ok = true

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -110.0
margin_right = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="DColor" type="PopupPanel" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -208.0
margin_right = 181.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 9 )
popup_exclusive = false
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Picker" type="ColorPicker" parent="DColor" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 9 )
alignment = 0
color = Color( 1, 1, 1, 1 )
edit_alpha = false
raw_mode = false
_sections_unfolded = [ "Theme" ]

[connection signal="pressed" from="HUD/Buttons/ResetButton" to="." method="_on_ResetButton_pressed"]

[connection signal="pressed" from="HUD/Buttons/EraseButton" to="." method="_on_EraseButton_pressed"]

[connection signal="pressed" from="HUD/Buttons/DrawButton" to="." method="_on_EraseButton_pressed"]

[connection signal="pressed" from="HUD/Buttons/ColorButton" to="." method="_on_ColorButton_pressed"]

[connection signal="button_up" from="HUD/PullButton" to="." method="_on_PullButton_button_up"]

[connection signal="button_up" from="HUD/PushButton" to="." method="_on_PushButton_button_up"]

[connection signal="confirmed" from="ClearDialogue" to="." method="_on_ClearDialogue_confirmed"]

[connection signal="popup_hide" from="DColor" to="." method="_on_DColor_popup_hide"]

[connection signal="color_changed" from="DColor/Picker" to="." method="_on_ColorPicker_color_changed"]


